--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Partage de données</title></head><body>
-<div style="text-align: center;"><big style="font-weight: bold;">Partage de données</big><br>
+<html lang="fr-fr"><head>
+
+
+<meta content="text/html; charset=UTF-8" http-equiv="content-type"><title>Partage de donnÃ©es</title></head><body style="color: rgb(0, 0, 0); background-color: rgb(204, 255, 255);" alink="#000099" link="#000099" vlink="#990099">
+<div style="text-align: center;"><big style="color: rgb(204, 0, 0);"><big style="font-weight: bold;">Partage de donnÃ©es</big></big><br>
 <br>
 <br>
 </div>
-<table style="text-align: left; height: 41px; margin-left: auto; margin-right: auto; width: 392px;" border="1" cellpadding="2" cellspacing="2">
+<table style="text-align: left; height: 368px; margin-left: auto; margin-right: auto; width: 214px;" border="1" cellpadding="2" cellspacing="2">
   <tbody>
     <tr>
       <td style="vertical-align: top; text-align: center; width: 555px;"><a href="TOUT%20EST%20RELATIF.pdf">JPP1</a><br>
