--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
 
 
 
+
 <meta content="text/html; charset=UTF-8" http-equiv="content-type"><title>Partage de données</title></head><body style="color: rgb(0, 0, 0); background-color: rgb(204, 255, 255);" alink="#000099" link="#000099" vlink="#990099">
 <div style="text-align: center;"><big style="color: rgb(204, 0, 0);"><big style="font-weight: bold;">Partage de données</big></big><br>
 <br>
@@ -41,14 +42,17 @@
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="La%20passion%20verticale.pdf">JPP8 Voler</a><br>
+      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="JANUS.pdf">JPP8 Janus</a><br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="IMOTHEP.pdf">JPP9 Imothep</a>
+      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="La%20passion%20verticale.pdf">JPP9 Voler</a>
       </td>
     </tr>
-    <tr>
+    <tr align="center">
+      <td style="vertical-align: top;"><a href="IMOTHEP.pdf">JPP10 Imothep</a></td>
+    </tr>
+<tr>
       <td style="vertical-align: top; text-align: center; width: 555px;"><a href="NGP1.pdf">Manuel de vol 1</a><br>
       </td>
     </tr>
