--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
 
 
 
+
 <meta content="text/html; charset=UTF-8" http-equiv="content-type"><title>Partage de données</title></head><body style="color: rgb(0, 0, 0); background-color: rgb(204, 255, 255);" alink="#000099" link="#000099" vlink="#990099">
 <div style="text-align: center;"><big style="color: rgb(204, 0, 0);"><big style="font-weight: bold;">Partage de données</big></big><br>
 <br>
@@ -45,12 +46,12 @@
       <td style="vertical-align: top; text-align: center; width: 555px;"><a href="JANUS.pdf">JPP8 Janus</a><br>
       </td>
     </tr>
-    <tr>
-      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="La%20passion%20verticale.pdf">JPP9 Voler</a>
-      </td>
+    
+    <tr align="center">
+      <td style="vertical-align: top;"><a href="IMOTHEP.pdf">JPP9 Imothep</a></td>
     </tr>
     <tr align="center">
-      <td style="vertical-align: top;"><a href="IMOTHEP.pdf">JPP10 Imothep</a></td>
+      <td style="vertical-align: top;"><a href="La%20passion%20verticale.pdf">JPP10 Voler</a></td>
     </tr>
 <tr>
       <td style="vertical-align: top; text-align: center; width: 555px;"><a href="NGP1.pdf">Manuel de vol 1</a><br>
@@ -61,11 +62,11 @@
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="vol1.mov">Vol Occitan 1</a><br>
+      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="vol1.mov">Vol Occitan</a><br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top; text-align: center; width: 555px;"><br>
+      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="Record%20PR.mp4">ITW Occitan</a>
       </td>
     </tr>
   </tbody>
