--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
 
 
 
+
 <meta content="text/html; charset=UTF-8" http-equiv="content-type"><title>Partage de données</title></head><body style="color: rgb(0, 0, 0); background-color: rgb(204, 255, 255);" alink="#000099" link="#000099" vlink="#990099">
 <div style="text-align: center;"><big style="color: rgb(204, 0, 0);"><big style="font-weight: bold;">Partage de données</big></big><br>
 <br>
@@ -62,11 +63,11 @@
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="vol1.mov">Vol Occitan</a><br>
+      <td style="vertical-align: top; text-align: center; width: 555px;"><a target="_blank" href="vol1.mov">Vol Occitan</a><br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="Record%20PR.mp4">ITW Occitan</a>
+      <td style="vertical-align: top; text-align: center; width: 555px;"><a target="_blank" href="Record%20PR.mp4">ITW Occitan</a>
       </td>
     </tr>
   </tbody>
