--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,7 @@
 
 
 
+
 <meta content="text/html; charset=UTF-8" http-equiv="content-type"><title>Partage de données</title></head><body style="color: rgb(0, 0, 0); background-color: rgb(204, 255, 255);" alink="#000099" link="#000099" vlink="#990099">
 <div style="text-align: center;"><big style="color: rgb(204, 0, 0);"><big style="font-weight: bold;">Partage de données</big></big><br>
 <br>
@@ -54,25 +55,26 @@
       <td style="vertical-align: top;"><a href="IMOTHEP.pdf">JPP9 Imothep</a></td>
     </tr>
     <tr align="center">
-      <td style="vertical-align: top;"><a href="La%20passion%20verticale.pdf">JPP10 Voler</a></td>
+      <td style="vertical-align: top;"><a href="Aspirisouffle.pdf">JPP10 Voler 1<br>
+</a></td>
     </tr>
 <tr>
-      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="NGP1.pdf">Manuel de vol 1</a><br>
+      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="Lapassionverticale.pdf">JPP11 Voler 2</a>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="NGP2.pdf">Manuel de vol 2</a><br>
+      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="NGP1.pdf">Manuel de vol 1</a>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="vol1.mp4">Vol Occitan 1</a><br>
+      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="NGP2.pdf">Manuel de vol 2</a>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top; text-align: center; width: 555px;"><a href="vol2.mp4">Vol Occitan 2</a>
-      </td>
+      <td style="vertical-align: top; text-align: center; width: 555px;">
+      <a href="vol1.mp4">Vol Occitan 1</a></td>
     </tr><tr align="center">
-      <td style="vertical-align: top;"><a href="vol3.mp4">Vol Occitan 3<br>
+      <td style="vertical-align: top;"><a href="vol3.mp4"></a><a href="vol2.mp4">Vol Occitan 2</a><a href="vol3.mp4">
       </a></td>
     </tr>
     <tr align="center">
